Small changes thanks to Curtis